--- a/package.json
+++ b/package.json
@@ -6,14 +6,6 @@
 		"build": "svelte-kit build",
 		"start": "svelte-kit start"
 	},
-	"devDependencies": {
-		"@sveltejs/adapter-node": "next",
-		"@sveltejs/kit": "next",
-		"@sveltejs/snowpack-config": "next",
-		"sass": "^1.0.0",
-		"svelte": "^3.29.0",
-		"svelte-preprocess": "^4.0.0"
-	},
 	"dependencies": {
 		"autoprefixer": "^10.1.0",
 		"postcss": "^8.2.1",
@@ -21,5 +13,21 @@
 		"svelte-scrollto": "^0.2.0",
 		"svelte-typewriter": "^2.4.5",
 		"tailwindcss": "^2.0.2"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.10",
+		"@babel/preset-env": "^7.12.11",
+		"@snowpack/plugin-typescript": "^1.0.0",
+		"@sveltejs/adapter-node": "next",
+		"@sveltejs/kit": "next",
+		"@sveltejs/snowpack-config": "next",
+		"sass": "^1.0.0",
+		"svelte": "^3.29.0",
+		"svelte-preprocess": "^4.0.0",
+		"tslib": "^2.0.0",
+		"typescript": "^4.0.0"
+	},
+	"resolutions": {
+		"snowpack": "2.17.0"
 	}
 }
