--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
 		"tailwindcss": "^2.0.2"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.12.10",
-		"@babel/preset-env": "^7.12.11",
 		"@snowpack/plugin-typescript": "^1.0.0",
+		"@sveltejs/adapter-netlify": "^1.0.0-next.0",
 		"@sveltejs/adapter-node": "next",
+		"@sveltejs/adapter-static": "^1.0.0-next.0",
 		"@sveltejs/kit": "next",
 		"@sveltejs/snowpack-config": "next",
 		"sass": "^1.0.0",
