--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"start": "svelte-kit start"
 	},
 	"dependencies": {
+		"@sveltejs/adapter-static": "^1.0.0-next.0",
 		"autoprefixer": "^10.1.0",
 		"postcss": "^8.2.1",
 		"svelte-media": "0.0.3",
@@ -15,15 +16,14 @@
 		"tailwindcss": "^2.0.2"
 	},
 	"devDependencies": {
+		"@snowpack/plugin-build-script": "^2.0.12",
 		"@snowpack/plugin-typescript": "^1.0.0",
-		"@sveltejs/adapter-netlify": "^1.0.0-next.0",
-		"@sveltejs/adapter-node": "next",
-		"@sveltejs/adapter-static": "^1.0.0-next.0",
+		"@sveltejs/adapter-netlify": "next",
 		"@sveltejs/kit": "next",
 		"@sveltejs/snowpack-config": "next",
 		"sass": "^1.0.0",
-		"svelte": "^3.29.0",
-		"svelte-preprocess": "^4.0.0",
+		"svelte": "^3.31.0",
+		"svelte-preprocess": "^4.5.2",
 		"tslib": "^2.0.0",
 		"typescript": "^4.0.0"
 	},
