--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
 		"tailwindcss": "^2.0.2"
 	},
 	"devDependencies": {
-		"@snowpack/plugin-build-script": "2.0.11",
+		"@snowpack/plugin-build-script": "^2.0.12",
 		"@snowpack/plugin-typescript": "^1.0.0",
 		"@sveltejs/adapter-netlify": "0.0.11",
 		"@sveltejs/kit": "0.0.25",
 		"@sveltejs/snowpack-config": "0.0.5",
 		"sass": "^1.0.0",
-		"svelte": "3.29.7",
-		"svelte-preprocess": "4.5.2",
+		"svelte": "^3.29.7",
+		"svelte-preprocess": "^4.5.2",
 		"tslib": "^2.0.0",
 		"typescript": "^4.0.0"
 	},
