--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
 	"name": "portfolio",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "svelte dev",
-		"build": "svelte build"
+		"dev": "svelte-kit dev",
+		"build": "svelte-kit build",
+		"start": "svelte-kit start"
 	},
 	"dependencies": {
+		"@sveltejs/adapter-static": "^1.0.0-next.0",
 		"autoprefixer": "^10.1.0",
 		"postcss": "^8.2.1",
 		"svelte-media": "0.0.3",
@@ -16,11 +18,11 @@
 	"devDependencies": {
 		"@snowpack/plugin-build-script": "^2.0.12",
 		"@snowpack/plugin-typescript": "^1.0.0",
-		"@sveltejs/adapter-netlify": "0.0.11",
-		"@sveltejs/kit": "0.0.25",
-		"@sveltejs/snowpack-config": "0.0.5",
+		"@sveltejs/adapter-netlify": "next",
+		"@sveltejs/kit": "next",
+		"@sveltejs/snowpack-config": "next",
 		"sass": "^1.0.0",
-		"svelte": "^3.29.7",
+		"svelte": "^3.31.0",
 		"svelte-preprocess": "^4.5.2",
 		"tslib": "^2.0.0",
 		"typescript": "^4.0.0"
