downgrade to stable svelte

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "svelte.plugin.css.diagnostics.enable": false,
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "recommendations": ["svelte.svelte-vscode"]
 }
