--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-	"name": "portfolio",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"start": "svelte-kit start"
-	},
-	"dependencies": {
-		"autoprefixer": "^10.1.0",
-		"postcss": "^8.2.1",
-		"svelte-media": "0.0.3",
-		"svelte-scrollto": "^0.2.0",
-		"svelte-typewriter": "^2.4.5",
-		"tailwindcss": "^2.0.2"
-	},
-	"devDependencies": {
-		"@snowpack/plugin-typescript": "^1.0.0",
-		"@sveltejs/adapter-netlify": "^1.0.0-next.0",
-		"@sveltejs/adapter-node": "next",
-		"@sveltejs/adapter-static": "^1.0.0-next.0",
-		"@sveltejs/kit": "next",
-		"@sveltejs/snowpack-config": "next",
-		"sass": "^1.0.0",
-		"svelte": "^3.29.0",
-		"svelte-preprocess": "^4.0.0",
-		"tslib": "^2.0.0",
-		"typescript": "^4.0.0"
-	},
-	"resolutions": {
-		"snowpack": "2.17.0"
-	}
+  "name": "portfolio",
+  "version": "0.0.1",
+  "scripts": {
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "start": "sirv public",
+    "validate": "svelte-check"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.1.0",
+    "postcss": "^8.2.1",
+    "svelte-media": "0.0.3",
+    "svelte-scrollto": "^0.2.0",
+    "tailwindcss": "^2.0.2",
+    "sirv-cli": "^1.0.0"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^16.0.0",
+    "@rollup/plugin-node-resolve": "^10.0.0",
+    "@rollup/plugin-typescript": "^6.0.0",
+    "@tsconfig/svelte": "^1.0.0",
+    "postcss-nesting": "^7.0.1",
+    "rollup": "^2.3.4",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.0",
+    "sass": "^1.0.0",
+    "svelte": "^3.0.0",
+    "svelte-check": "^1.0.0",
+    "svelte-preprocess": "^4.0.0",
+    "tslib": "^2.0.0",
+    "typescript": "^3.9.3"
+  }
 }
