--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,6 @@
 {
-  "compilerOptions": {
-    "moduleResolution": "node",
-    "target": "es2017",
-    "importsNotUsedAsValues": "error",
-    "isolatedModules": true,
-    "sourceMap": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "baseUrl": ".",
-    "paths": {
-      "$components/*": ["./src/components/*"],
-      "$logic/*": ["./src/logic/*"]
-    }
-  },
+  "extends": "@tsconfig/svelte/tsconfig.json",
+
   "include": ["src/**/*"],
-  "exclude": ["node_modules/*", ".svelte"]
+  "exclude": ["node_modules/*", "__sapper__/*", "public/*"]
 }
