--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
   "svelte.plugin.css.diagnostics.enable": false,
   "editor.formatOnSave": true,
-  "recommendations": ["svelte.svelte-vscode"]
+  "recommendations": ["svelte.svelte-vscode"],
+  "css.validate": false,
+  "less.validate": false,
+  "scss.validate": false,
+  "stylelint.enable": true
 }
